# cpp-snake-game

./: README.md
prototype/: CMakeLists.txt
